--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "bcrypt": "^5.1.1",
-    "express": "^4.18.2"
+    "crypto-js": "^4.1.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.0.1",
+    "hi-base32": "^0.5.1",
+    "jsonwebtoken": "^9.0.2",
+    "otpauth": "^9.1.4",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "prisma": "^5.3.1"
